--- a/views/portfolios/show.ejs
+++ b/views/portfolios/show.ejs
@@ -8,7 +8,6 @@
   <body>
     <%- include('../partials/_navbar.ejs') %>
 
-    <!-- <h3>Owner</h3> -->
     <% if (portfolio.owner._id.equals(user._id)) { %>
       <p>My Profile</p>
       <a href="/portfolios/<%= portfolio._id%>/edit">Edit This Portfolio</a>
@@ -27,7 +26,55 @@
     <p>Media:</p>
     <br>
 
-    <label>Leave a comment/review for the artist! If you've worked with them, share your experience:</label>
-    <textarea></textarea>
+    <!-- <label>Leave a comment/review for the artist! If you've worked with them, share your experience:</label>
+    <textarea></textarea> -->
+
+    <!-- <h2>Likes</h2>
+<p>Liked by <%= portfolio.likedByUsers.length %> people.</p>
+<form
+  action="/portfolios/<%= portfolio._id %>/liked-by/<%= user._id %>"
+  method="POST"
+>
+  <button type="submit">Like it!</button>
+</form> -->
+
+<h2>Likes</h2>
+
+<p>Liked by <%= portfolio.likedByUsers.length %> people.</p>
+
+<% if (userHasLiked) { %>
+<p>You've liked this profile!</p>
+
+<form action="/portfolios/<%= portfolio._id %>/liked-by/<%= user._id %>?_method=DELETE"
+  method="POST">
+  <button type="submit">Unlike it!</button>
+</form>
+
+<% } else { %>
+<p>You haven't liked this profile.</p>
+
+<form
+  action="/portfolios/<%= portfolio._id %>/liked-by/<%= user._id %>"
+  method="POST"
+>
+  <button type="submit">Like it!</button>
+</form>
+
+<h3>Leave a comment/review for the artist! If you've worked with them, share your experience:</h3>
+<form action="/portfolios/<%= portfolio._id %>/comments" method="POST">
+  <textarea name="content" required></textarea>
+  <button type="submit">Submit Comment</button>
+</form>
+
+<h3>Comments:</h3>
+<ul>
+<% comments.forEach(comment => { %>
+<li>
+  <p><strong><%= comment.user.username %>:</strong> <%= comment.content %></p>
+</li>
+<% }) %>
+</ul>
+
+<% } %>
   </body>
 </html>
