--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -1,6 +1,6 @@
   <nav>
     <% if (user) { %>
-    <a href="/portfolios">View all Portfolios</a>
+    <a href="/portfolios">View all</a>
     <a href="/auth/sign-out">Sign Out</a>
     <% } else { %>
     <a href="/auth/sign-up">Sign Up</a>
