--- a/views/portfolios/index.ejs
+++ b/views/portfolios/index.ejs
@@ -3,23 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/styleindex.css">
     <title>All Portfolios</title>
   </head>
   <body>
-    <%- include('../partials/_navbar.ejs') %>
+    <div id="login">
+      <%- include('../partials/_navbar.ejs') %>
+      <a href="/">Home</a> 
+      <a href="/portfolios/new">Create a New Profile</a>
+    </div>
 
-    <a href="/">Home</a> 
-    <a href="/portfolios/new">Create a New Profile</a>
-    <br>
+    <h1>Database of Artists</h1>
 
-    <h1>Here's all the Portfolios</h1>
-    <ul> 
-        <% portfolios.forEach((portfolio) => { %>
-          <li>
-           <%= portfolio.artistName %> <%= portfolio.biography %> by <%= portfolio.owner.username %>
+    <ul>
+      <% portfolios.forEach((portfolio) => { %>
+        <li>
+          <img src="../../media/defaultpic.jpg" alt="Artist 1 Image" class="portfolio-image" />
+
+          <h3><%= portfolio.artistName %></h3>
+          <p><%= portfolio.biography %></p>
+          <p>by <%= portfolio.owner.username %></p>
+          
           <a href="/portfolios/<%= portfolio._id %>">View more details</a>
-          </li>
-        <% }) %>
+        </li>
+      <% }) %>
     </ul>
   </body>
 </html>
